Update Usage docs (#135)
* Update antora.yml attributes
* Fix 'Asciidoc' references by 'AsciiDoc'
* Clean compiler options in POM
* Validate Gradle configuration for Java 11, 17 and 21
* Validate Maven configuration for Java 11, 17 and 21
* Remove Ant